[gd_scene load_steps=15 format=3 uid="uid://ccxu83j2mvjx3"]

[ext_resource type="Script" path="res://Scripts/menu/final_score_board.gd" id="1_dyrj4"]
[ext_resource type="FontFile" uid="uid://plk2ssnqqgfy" path="res://Resources/font/MotionControl-Bold.otf" id="1_tqhy2"]
[ext_resource type="FontFile" uid="uid://gh3mknrglbsr" path="res://Resources/font/The Wild Breath of Zelda.otf" id="2_faent"]
[ext_resource type="AudioStream" uid="uid://dmkakomdg1w5x" path="res://Resources/sound/JRPG Piano.mp3" id="3_beevk"]
[ext_resource type="AudioStream" uid="uid://dapt6hwr4h0r2" path="res://Resources/sound/menu_sfx/menu_hover.wav" id="4_yecmg"]
[ext_resource type="AudioStream" uid="uid://bonopwd1xuju2" path="res://Resources/sound/menu_sfx/menu_select.wav" id="5_k6j6x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a08bh"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_ft0mj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/RankValueS:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/RankValueA:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel/RankValueB:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel/RankValueC:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Panel/RankValueD:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_cx4oo"]
resource_name = "RankA"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/RankValueA:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_wv3ax"]
resource_name = "RankB"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/RankValueB:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.866667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_66lrv"]
resource_name = "RankC"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/RankValueC:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.866667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_wine4"]
resource_name = "RankD"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/RankValueD:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.866667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_74jii"]
resource_name = "RankS"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/RankValueS:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0666667, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ix1dv"]
_data = {
"RESET": SubResource("Animation_ft0mj"),
"RankA": SubResource("Animation_cx4oo"),
"RankB": SubResource("Animation_wv3ax"),
"RankC": SubResource("Animation_66lrv"),
"RankD": SubResource("Animation_wine4"),
"RankS": SubResource("Animation_74jii")
}

[node name="FinalScoreBoard" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dyrj4")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a08bh")

[node name="Rank" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 519.0
offset_top = 91.0
offset_right = 677.0
offset_bottom = 132.0
size_flags_horizontal = 10
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_tqhy2")
theme_override_font_sizes/font_size = 40
text = "Final rank: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="RankValueS" type="Label" parent="Panel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_left = 550.0
offset_top = 155.0
offset_right = 644.0
offset_bottom = 364.0
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_faent")
theme_override_font_sizes/font_size = 200
text = "S
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RankValueA" type="Label" parent="Panel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_left = 539.0
offset_top = 162.0
offset_right = 651.0
offset_bottom = 371.0
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.752941, 0.752941, 0.752941, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_faent")
theme_override_font_sizes/font_size = 200
text = "A
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RankValueB" type="Label" parent="Panel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_left = 542.0
offset_top = 163.0
offset_right = 650.0
offset_bottom = 372.0
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.221797, 0.566935, 0.483199, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_faent")
theme_override_font_sizes/font_size = 200
text = "B
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RankValueC" type="Label" parent="Panel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_left = 542.0
offset_top = 157.0
offset_right = 640.0
offset_bottom = 366.0
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.898714, 0.579658, 7.70092e-07, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_faent")
theme_override_font_sizes/font_size = 200
text = "C
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RankValueD" type="Label" parent="Panel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_left = 548.0
offset_top = 164.0
offset_right = 656.0
offset_bottom = 585.0
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.770439, 3.70607e-06, 4.81307e-07, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_faent")
theme_override_font_sizes/font_size = 200
text = "D

"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenu" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 535.0
offset_top = 466.0
offset_right = 654.0
offset_bottom = 505.0
theme_override_fonts/font = ExtResource("1_tqhy2")
theme_override_font_sizes/font_size = 30
text = "Main Menu"

[node name="MainMenuTimer" type="Timer" parent="Panel"]
process_mode = 3
one_shot = true

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_beevk")
volume_db = -20.0
autoplay = true
parameters/looping = true

[node name="SFX" type="Node" parent="."]

[node name="Hover" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("4_yecmg")
max_polyphony = 5

[node name="Select" type="AudioStreamPlayer" parent="SFX"]
process_mode = 3
stream = ExtResource("5_k6j6x")
max_polyphony = 5

[node name="Cutscene" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ix1dv")
}

[connection signal="mouse_entered" from="Panel/MainMenu" to="." method="_on_main_menu_mouse_entered"]
[connection signal="pressed" from="Panel/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="timeout" from="Panel/MainMenuTimer" to="." method="_on_main_menu_timer_timeout"]
